@@ -29,6 +29,8 @@
 
         public Machine(bool iscurrent)
         {
+            // TODO use only one environment
+            this.environment = new LocalBindingEnvironment(this.environment);
             if (iscurrent)
                 this.SetCurrent();
         }
